--- a/css/styles.css
+++ b/css/styles.css
@@ -1,159 +1,132 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 
 .attribution {
   font-size: 11px;
   margin-top: 1rem;
   text-align: center;
   color: white;
-
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-body{
-    background-color: hsl(217, 54%, 11%);
-    /* font-size: 18px; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: calc(100vh - 0.1px);
-    font-family: 'Outfit', sans-serif;
-    /* margin: 0 3rem; */
+body {
+  background-color: hsl(217, 54%, 11%);
+  /* font-size: 18px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 0.1px);
+  font-family: "Outfit", sans-serif;
+  /* margin: 0 3rem; */
 }
 
-.equ{
-    max-width: 100%;
-    border-radius: 0.6rem;
-   
-
-
+.equ {
+  max-width: 100%;
+  border-radius: 0.6rem;
 }
 
-.container .main-img{
-   position: relative;
+.container .main-img {
+  position: relative;
 }
-.container .main-img div{
-    position: absolute;
-    width: 100%;
-    height: calc(100% - 4px);
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-
-}
-
-
-.container .main-img div:hover{
-    background-color: rgba(0, 255, 255, 0.493);
-    opacity: 1;
-    cursor: pointer;
-    transition: opacity 0.3s ease-in-out;
-
-
-
+.container .main-img div {
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 4px);
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
 }
 
-
-
-.container{
-    background-color:hsl(216, 50%, 16%);
-    max-width: 320px;
-
-    border-radius: 1rem;
-    padding: 1.25rem;
-    
+.container .main-img div:hover {
+  background-color: rgba(0, 255, 255, 0.493);
+  opacity: 1;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out;
 }
 
-hr{
+.container {
+  background-color: hsl(216, 50%, 16%);
+  max-width: 320px;
 
- border-style: none;
- border-top-style: solid;
- border-color: hsl(215, 32%, 27%);
- border-width: 1px;
-}
-h3{
-    color: hsl(0, 0%, 100%) ;
-    margin:1rem 0;
-}
-h3:hover{
-    cursor: pointer;
-    color: cyan;
-}
-p{
-   color: hsl(215, 51%, 70%);
-    
-    line-height: 1.5rem;
-
-    font-weight: 300;
-    
-
+  border-radius: 1rem;
+  padding: 1.25rem;
 }
 
-ul{
-    list-style-type: none;
-
+hr {
+  border-style: none;
+  border-top-style: solid;
+  border-color: hsl(215, 32%, 27%);
+  border-width: 1px;
 }
-.container ul{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+h3 {
+  color: hsl(0, 0%, 100%);
+  margin: 1rem 0;
 }
-.container ul :first-child{
-    color: hsl(178, 100%, 50%);
-    font-weight: 400;
-}   
-.container ul :last-child{
-    color: hsl(215, 51%, 70%);
-
+h3:hover {
+  cursor: pointer;
+  color: cyan;
 }
-.container ul li{
-    display: flex;
-    align-items: center;
-    justify-content:space-around;
-    margin-top: 1rem;
+p {
+  color: hsl(215, 51%, 70%);
 
+  line-height: 1.5rem;
 
+  font-weight: 300;
 }
-.container ul li img{
-    margin-right: 0.5rem;
 
-
-
+ul {
+  list-style-type: none;
+}
+.container ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.container ul :first-child {
+  color: hsl(178, 100%, 50%);
+  font-weight: 400;
+}
+.container ul :last-child {
+  color: hsl(215, 51%, 70%);
+}
+.container ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
+.container ul li img {
+  margin-right: 0.5rem;
 }
 .container .avatar {
- display: flex;
- padding-top: 1rem;
- justify-content: start;
- align-items: center;
-
- }
-
- .container .avatar img{
-    max-width: 10%;
-    border: 1px solid white;
-    border-radius: 50%;
-    margin-right: 1rem;
-
-    
+  display: flex;
+  padding-top: 1rem;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 1rem;
 }
-span{
-    color: white;
-}
-span:hover{
-    color: cyan;
-    cursor: pointer;
 
+.container .avatar img {
+  max-width: 10%;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+span {
+  color: white;
+}
+span:hover {
+  color: cyan;
+  cursor: pointer;
 }
